--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
     implementation 'org.glassfish:javax.annotation:10.0-b28'
     implementation 'com.github.jitpack:gradle-simple:1.0.5'
     //implementation 'com.github.eclipse:egit-github:v5.0.0.201806131550-r'
+    implementation 'com.netflix.rxjava:rxjava-android:0.16.1'
 
     //implementation 'com.github.eclipse:egit-github:v5.2.0.201812061821-r'
 
