--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.github.jitpack:gradle-simple:1.0.5'
     //implementation 'com.github.eclipse:egit-github:v5.0.0.201806131550-r'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
     //implementation 'com.github.eclipse:egit-github:v5.2.0.201812061821-r'
