--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     //implementation 'com.github.eclipse:egit-github:v5.2.0.201812061821-r'
 
 }
