RepoWIthContributors = ExtendedRepo; ExtededRepoLite added to project; view works with IExtendedRepo; loading ExtendedRepoLite W-I-P

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             Properties properties = new Properties()
-            def propFile = new File('D:/github-repos-test/secret.properties')
+            def propFile = new File('secret.properties')
             if (propFile.canRead()) {
                 properties.load(new FileInputStream(propFile))
                 if (properties != null && properties.containsKey('CLIENT_ID')
