commits' list loads for repo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </intent-filter>
         </activity>
         <activity android:name=".main.githubUI.activities.ContributorsListActivity" />
+        <activity android:name=".main.githubUI.activities.CommitsListActivity" />
     </application>
 
 </manifest>
