--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,7 @@ dependencies {
 
     //Coroutines
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
 repositories {
     mavenCentral()
