--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,12 @@ dependencies {
     //Coroutines
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
+    //material design
+    implementation "com.google.android.material:material:1.0.0"
+
+    //stetho
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
 repositories {
     mavenCentral()
