generification of ViewModel; Repository as business-logic-object is remaned to Repozitory to be distinguishable from Repository objects as app-cash-holder; old classes deleted;

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ tmp/**/*
 *~.nib
 local.properties
 
-# Do you really want to ignore .classpath? That seems a rather important thing to have in your git repository.
+# Do you really want to ignore .classpath? That seems a rather important thing to have in your git repozitory.
 # .classpath
 
 .settings/
